# unified_esc_pos_printer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: unified_esc_pos_printer.podspec
ios/Classes/: UnifiedEscPosPrinterPlugin.swift
lib/: unified_esc_pos_printer.dart
lib/src/codec/: hex_codec.dart
lib/src/connectors/: ble_connector.dart  bluetooth_connector.dart  network_connector.dart  printer_connector.dart
lib/src/core/: barcode.dart  capability_profile.dart  commands.dart  enums.dart  extensions.dart  generator.dart  print_column.dart  print_text_styles.dart  qrcode.dart  (+2 more)
test/: unified_esc_pos_printer_test.dart
windows/: CMakeLists.txt  ble_manager.cpp  ble_manager.h  bt_classic_manager.cpp  bt_classic_manager.h  unified_esc_pos_printer_plugin.cpp  usb_print_manager.cpp  usb_print_manager.h
windows/include/unified_esc_pos_printer/: unified_esc_pos_printer_plugin_c_api.h
(+20 files in other folders)
